// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outputs the expected tree when predictionTimes are not passed 1`] = `
<div
  className="prediction-times"
>
  <span
    className="no-prediction-time"
  >
    None
  </span>
</div>
`;

exports[`outputs the expected tree when predictionTimes are passed 1`] = `
<div
  className="prediction-times"
>
  <span
    key="9359239"
  >
    <span
      className="prediction-time not-affected-by-layover next-time"
    >
      Now
    </span>
    , 
  </span>
  <span
    key="9359240"
  >
    <span
      className="prediction-time not-affected-by-layover other-time"
    >
      12
    </span>
    , 
  </span>
  <span
    key="9359237"
  >
    <span
      className="prediction-time not-affected-by-layover other-time"
    >
      24
    </span>
    , 
  </span>
  <span
    key="9359243"
  >
    <span
      className="prediction-time not-affected-by-layover other-time"
    >
      24
    </span>
  </span>
</div>
`;
